--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint:html": "htmlhint \"**/*.html\"",
     "lint:css": "stylelint \"**/*.css\" --fix",
     "lint": "npm run lint:html && npm run lint:css",
-    "lint:fix": "npm run lint:css"
+    "lint:fix": "npm run lint:css",
+    "test:a11y": "node test-a11y.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,11 @@
     "url": "https://github.com/anais0210/checklist-rncp6-cda/issues"
   },
   "homepage": "https://github.com/anais0210/checklist-rncp6-cda#readme",
-  "description": "",
+  "description": "Checklist du rapport de projet CDA",
   "devDependencies": {
+    "@axe-core/playwright": "^4.8.2",
     "htmlhint": "^1.5.1",
+    "playwright": "^1.42.1",
     "stylelint": "^16.20.0",
     "stylelint-config-recommended": "^16.0.0",
     "stylelint-config-standard": "^38.0.0"
