chore: Update conf htmlHint and fix html label

--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -8,5 +8,36 @@
     "id-unique": true,
     "src-not-empty": true,
     "attr-no-duplication": true,
-    "title-require": true
+    "title-require": true,
+    "tag-self-close": true,
+    "empty-tag-not-self-closed": false,
+    "head-script-disabled": false,
+    "href-abs-or-rel": false,
+    "attr-value-not-empty": true,
+    "attr-unsafe-chars": true,
+    "attr-value-single-quotes": false,
+    "attr-no-unnecessary-whitespace": true,
+    "alt-require": true,
+    "input-requires-label": true,
+    "form": true,
+    "accessibility": true,
+    "indent-width": 2,
+    "indent-style": "space",
+    "space-tab-mixed-disabled": true,
+    "max-line-length": 120,
+    "line-end-style": "lf",
+    "script-disabled": false,
+    "style-disabled": false,
+    "link-rel-noopener": true,
+    "meta-refresh": false,
+    "script-type": true,
+    "style-type": true,
+    "html-lang-require": true,
+    "meta-viewport": true,
+    "meta-charset-utf-8": true,
+    "meta-compat": true,
+    "attr-validate": true,
+    "tag-validate": true,
+    "doctype-html5": true,
+    "attr-value-valid": true
 } 
