--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "description": "Checklist pour le rapport de projet CDA",
   "devDependencies": {
     "@axe-core/playwright": "^4.8.2",
-    "htmlhint": "^1.5.1",
-    "playwright": "^1.42.1",
-    "stylelint": "^16.20.0",
-    "stylelint-config-recommended": "^16.0.0",
-    "stylelint-config-standard": "^38.0.0"
+    "@playwright/test": "^1.41.2",
+    "htmlhint": "^1.1.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0"
   },
   "engines": {
     "node": ">=14.0.0"
