--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "builds": [
         {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "buildCommand": "bash deploy.sh && echo 'Build completed'"
-            }
+            "src": "**/*.html",
+            "use": "@vercel/static"
         }
-    ]
+    ],
+    "buildCommand": "bash deploy.sh",
+    "outputDirectory": ".",
+    "public": true
 } 
